--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -130,3 +134,26 @@ form button[type="submit"] {
     display: flex;
     justify-content: center;
   }
+
+
+  .card {
+  
+    /* Add shadows to create the "card" effect */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
+    
+  }
+
+  .allCards{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+  }
+
+  img {
+    border-radius: 5px 5px 0 0;
+    width: 310px;
+    border-bottom: 2px solid rgb(4, 4, 4);
+ }
