--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -136,19 +136,16 @@ form button[type="submit"] {
   }
 
 
-  .card {
-  
-    /* Add shadows to create the "card" effect */
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    grid-gap: 20px;
-    
-  }
+ 
 
-  .allCards{
+    .allCards{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: white;
+    border: 2px solid black;
+    height: 100px;
+    width: 100px;
     
   }
 
@@ -156,4 +153,4 @@ form button[type="submit"] {
     border-radius: 5px 5px 0 0;
     width: 310px;
     border-bottom: 2px solid rgb(4, 4, 4);
- }
+ } 
