--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -13,6 +13,7 @@
   /* background-image: url(https://wallpaperaccess.com/full/5056828.jpg), url(https://wallpaperaccess.com/full/5056828.jpg); */
   background-position: right bottom, left top;
   background-repeat: no-repeat, repeat;
+  background-color: #845750;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,13 +23,11 @@
 }
 
 body {
-  margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  max-width: 100%;
+ /* display: flex; 
+ justify-content: center;
+ height: 100vh;
+ color: rgb(212, 212, 212); */
+
   
 }
 
@@ -48,10 +47,10 @@ header {
 }
 
 .click{
-  background-color: #fc6bf8;
+  background-color: #ffffff;
   border: none;
   font-weight: bold;
-  color: rgb(78, 248, 101);
+  color: rgb(0, 0, 0);
   font-size: 17px;
 }
 header a {
@@ -106,13 +105,24 @@ form button[type="submit"] {
 .signup, .login{
   display: flex;
   justify-content: center;
-  color: rgb(0, 0, 0);
+  color: rgb(25, 25, 25);
 }
 
-
+.container {
+  position: relative;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  background-color: rgb(168, 61, 61);
+  border: 2px solid rgb(0, 0, 0);
+  font-size: 18px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+  transition: box-shadow 0.2s ease, transform 0.2s ease;
+}
 
 ::placeholder {
-  color: rgb(107, 57, 245);
+  color: rgb(255, 255, 255);
   font-weight: bold
 }
 
@@ -138,21 +148,54 @@ form button[type="submit"] {
   }
 
 
- 
+  .card {
+    
+    position: relative;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    background-color: rgb(168, 61, 61);
+    border: 2px solid rgb(0, 0, 0);
+    font-size: 18px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    
+  
+  
+  }
 
     .allCards{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background-color: white;
-    border: 2px solid black;
-    height: 100px;
-    width: 100px;
+   
+    
+      justify-content: space-between;
+      flex-wrap: wrap;
+      color: white; 
+  
+
     
   }
 
+  h1 {
+    margin: 10px;
+    font-size: 40px;
+  }
+
+  p {
+    font-size: 20px;
+    margin: 20;
+    visibility: hidden;
+    opacity: 0;
+
+  }
+
+  span {
+font-weight: bold;
+}
+
   img {
-    border-radius: 5px 5px 0 0;
-    width: 310px;
-    border-bottom: 2px solid rgb(4, 4, 4);
+   height: 500px;
+   width: 350px;
+   border-radius: 3px;
  } 
+
