--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -199,3 +199,26 @@ font-weight: bold;
    border-radius: 3px;
  } 
 
+ .update{
+  border-radius: .3em;
+  margin-left: .4em;
+}
+
+.deleteBtn{
+  border-radius: 1em;
+  margin-left: 1em;
+}
+
+.welcome {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  color: rgb(255, 98, 98);
+  background-color: rgb(10, 0, 0);
+}
+
+.BookSearch{
+  display: flex;
+  justify-content: center;
+  
+}
