--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -10,10 +10,10 @@
 
   color-scheme: light dark;
   color: rgba(249, 249, 249, 0.87);
-  /* background-image: url(https://wallpaperaccess.com/full/5056828.jpg), url(https://wallpaperaccess.com/full/5056828.jpg); */
-  background-position: right bottom, left top;
-  background-repeat: no-repeat, repeat;
-  background-color: #845750;
+  background-image: url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg), url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg);
+  background-position: center;
+  /* background-repeat: no-repeat, repeat; */
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -221,4 +221,34 @@ font-weight: bold;
   display: flex;
   justify-content: center;
   
+}
+
+.card1 {
+    
+  position: relative;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  background-color: rgb(8, 8, 8);
+  border: 2px solid rgb(0, 0, 0);
+  font-size: 18px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+  transition: box-shadow 0.2s ease, transform 0.2s ease;
+  
+
+
+}
+
+.container1 {
+  position: relative;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  background-color: rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
+  font-size: 18px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+  transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
