--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -9,8 +9,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(249, 249, 249, 0.87);
-  background-image: url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg), url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg);
+  color: rgba(60, 53, 53, 0.87);
+  /* background-image: url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg), url(https://i.pinimg.com/originals/66/72/dd/6672ddd7cb1bb95b9fbdf0c780edc71c.jpg); */
   background-position: center;
   /* background-repeat: no-repeat, repeat; */
 
@@ -149,7 +149,11 @@ form button[type="submit"] {
 
 
   .card {
-    
+    display: grid;
+ 
+    grid-template-columns: repeat(3, 1fr);
+     
+    grid-auto-rows: auto;
     position: relative;
     margin-bottom: 40px;
     border-radius: 10px;
@@ -224,17 +228,18 @@ font-weight: bold;
 }
 
 .card1 {
-    
+  display: grid;
+ 
+grid-template-columns: repeat(3, 1fr);
+ 
+grid-auto-rows: auto;
+ 
+grid-gap: 1rem;
   position: relative;
-  margin-bottom: 40px;
-  border-radius: 10px;
-  background-color: rgb(8, 8, 8);
-  border: 2px solid rgb(0, 0, 0);
-  font-size: 18px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-  transition: box-shadow 0.2s ease, transform 0.2s ease;
+  background: #222;
+  border: 1px solid #dd2476;
+  color: rgba(250, 250, 250, 0.8);
+  margin-bottom: 2rem;
   
 
 
@@ -242,13 +247,8 @@ font-weight: bold;
 
 .container1 {
   position: relative;
-  margin-bottom: 40px;
-  border-radius: 10px;
-  background-color: rgb(0, 0, 0);
-  border: 2px solid rgb(0, 0, 0);
-  font-size: 18px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-  transition: box-shadow 0.2s ease, transform 0.2s ease;
+  background: #222;
+  border: 1px solid #dd2476;
+  color: rgba(250, 250, 250, 0.8);
+  margin-bottom: 2rem;
 }
