--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -55,10 +55,10 @@ header {
 }
 
 .click{
-  background-color: #ffffff;
+  background-color: #ffffff00;
   border: none;
   font-weight: bold;
-  color: rgb(0, 0, 0);
+  color: rgb(231, 231, 231);
   font-size: 17px;
 }
 header a {
@@ -143,7 +143,7 @@ form button[type="submit"] {
 }
 
 .login {
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .loginE {
@@ -235,6 +235,11 @@ font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 55%;
+  margin: 40px auto;
+  line-height: 56px;
+  position: relative;
+  
 
   
   background-image: url(https://thumbs.dreamstime.com/b/vector-pink-sky-clouds-anime-clean-style-evening-sunset-background-234335822.jpg); 
@@ -260,6 +265,8 @@ font-weight: bold;
   display: table;
   clear: both;
   background-color: #000000;
+  flex-direction: column;
+  
   
 
 
@@ -271,6 +278,8 @@ font-weight: bold;
       clear: both;
   margin-bottom: 2rem;
   font-size: larger;
+  border: 3px solid #fff;
+    padding: 20px;
   background-image: url(https://wallpaperaccess.com/full/2668714.jpg);
  
  
