--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -40,6 +40,7 @@ code {
 header {
   display: flex;
   justify-content: space-between;
+  
   align-items: center;
   width: 100%;
   border-bottom: 5px solid rgb(255, 255, 255);
@@ -68,12 +69,15 @@ header {
   font-size: 17px;
 }
 header a {
+  
+  color: #000000;
+  
   display: block;
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
-  /* background-image: url(https://img.myloview.com/posters/vector-blue-sky-clouds-anime-clean-style-background-design-700-184099297.jpg); */
+  text-decoration: none; 
+  background-image: url(https://img.myloview.com/posters/vector-blue-sky-clouds-anime-clean-style-background-design-700-184099297.jpg); 
   
 }
 
@@ -87,8 +91,8 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 200px;
-  height: 200px;
+  width: 500px;
+  height: 300px;
   margin: 0 auto;
   margin-top: 3em;
   margin-bottom: 5em;
@@ -97,7 +101,7 @@ form {
 }
 
 .form1 {
-  background-color: #000000;
+  /* background-color: #000000;
   border: 2px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
@@ -109,7 +113,7 @@ form {
   margin-top: 3em;
   margin-bottom: 5em;
   padding: 0 1rem 1rem;
-  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg); 
+  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg);  */
 }
 
 .form2 {
@@ -155,7 +159,7 @@ form button[type="submit"] {
 }
 
 .container {
-  position: relative;
+  /* position: relative;
   margin-bottom: 40px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.468);
@@ -166,13 +170,13 @@ form button[type="submit"] {
   color: #f6f6f6;
   font-size: large;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-  transition: box-shadow 0.2s ease, transform 0.2s ease;
+  transition: box-shadow 0.2s ease, transform 0.2s ease; */
   
 }
 
 ::placeholder {
-  color: rgb(0, 0, 0);
-  font-weight: bold
+  /* color: rgb(0, 0, 0);
+  font-weight: bold */
 }
 
 
@@ -196,7 +200,7 @@ form button[type="submit"] {
 
 
   .card {
-    display: grid;
+    /* display: grid;
  
     grid-template-columns: repeat(3, 1fr);
      
@@ -213,7 +217,7 @@ form button[type="submit"] {
     transition: box-shadow 0.2s ease, transform 0.2s ease;
     background-image: url(https://c4.wallpaperflare.com/wallpaper/965/883/624/manga-one-piece-wallpaper-preview.jpg);
     
-  
+   */
   
   }
 
@@ -359,7 +363,7 @@ font-weight: bold;
 }
 
 .container1 {
-  content: "";
+  /* content: "";
       display: inline-flex;
       clear: both;
   margin-bottom: 2rem;
@@ -367,30 +371,269 @@ font-weight: bold;
   border: 3px solid #fff;
     padding: 20px;
   background-image: url(https://wallpaperaccess.com/full/2668714.jpg);
- 
+  */
+  margin-bottom: 2rem;
+  font-size: larger;
+  border: 3px solid #fff;
  
 }
 
 .card2 {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-  background-image: url( https://ih0.redbubble.net/image.755067291.0854/flat,800x800,075,f.u1.jpg);
-
+  display: grid;
+ 
+    grid-template-columns: repeat(3, 1fr);
+     
+    grid-auto-rows: auto;
+    position: relative;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    background-color: rgb(87, 59, 59);
+    border: 2px solid rgb(0, 0, 0);
+    font-size: 18px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    background-image: url(https://c4.wallpaperflare.com/wallpaper/965/883/624/manga-one-piece-wallpaper-preview.jpg);
+    
 
 
 }
 
 .container2 {
   position: relative;
-  background: rgb(233, 178, 178);
-  border: 1px solid #0e0006;
-  color: rgba(0, 0, 0, 0.8);
-  margin-bottom: 2rem;
-  font-size: larger;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.468);
+  border: 2px solid rgb(0, 0, 0);
+  font-size: 18px;
+  overflow: hidden;
+  cursor: pointer;
+  color: #f6f6f6;
+  font-size: large;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
+  transition: box-shadow 0.2s ease, transform 0.2s ease;
 
  
 }
 
+
+/* .form-title,
+.input {
+  font-family: "Montserrat", sans-serif;
+}
+
+.form-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: -0.18px;
+  color: #888;
+}
+
+.form-container {
+  margin-top: 20px;
+  display: flex;
+  grid-gap: 32px;
+  gap: 32px;
+} */
+
+/* input {
+  padding: 12px;
+  border-radius: 4px;
+  border: 1px solid #e8e8e8;
+  background-color: #fff;
+  font-size: 1rem;
+  letter-spacing: -0.15px;
+  color: #121212;
+}
+
+.inputTextBox {
+  width: 50%;
+}
+
+.add-book-button {
+  cursor: pointer;
+  width: 20%;
+  padding: 12px;
+  border-radius: 3px;
+  background-color: #0290ff;
+  border: none;
+  letter-spacing: 0.5px;
+  color: #fff;
+  font-size: 0.813rem;
+  font-weight: 700;
+  font-family: "Roboto Slab", serif;
+} */
+
+.books {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  grid-gap: 1rem;
+  gap: 1rem;
+}
+
+.book {
+  background-image: url(https://png.pngtree.com/background/20211217/original/pngtree-royal-golden-blue-mandala-art-background-with-border-invitation-card-wedding-picture-image_1596347.jpg);
+  border-radius: 4px;
+  border: 1px solid #000000;
+  padding: 2rem;
+}
+
+.book-content {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e8dfdf;
+  
+}
+
+.book-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  
+}
+
+.book-category {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.875rem;
+  opacity: 0.5;
+}
+
+.book-title {
+  margin-top: 0.188rem;
+  font-size: 1.375rem;
+  letter-spacing: -0.2px;
+}
+
+.book-author {
+  font-size: larger;
+  font-weight: 300;
+  color: #4386bf;
+}
+
+.book-author,
+.book-title {
+  font-family: "Roboto Slab", serif;
+}
+
+.book-category,
+.book-title {
+  font-weight: 700;
+  color: #121212;
+}
+
+.container-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 1.313rem;
+  gap: 20px;
+}
+
+.action-button {
+  font-family: "Roboto Slab", serif;
+  background-color: transparent;
+  border: none;
+  color: #4386bf;
+  font-size: 0.875rem;
+  font-weight: 300;
+  align-items: center;
+  cursor: pointer;
+}
+
+.vertical-divider {
+  width: 0.125rem;
+  height: 1.5rem;
+  background-color: #e8e8e8;
+  margin: 0 1rem;
+}
+
+.progress-container {
+  display: flex;
+  align-items: center;
+}
+
+.circular-progress-container {
+  width: 5.625rem;
+  height: 5.625rem;
+  padding: 0.63rem 0.625rem 0.75rem 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circular-progress {
+  position: absolute;
+  border: solid 5px #307bbe;
+  border-left-color: #e8e8e8;
+  border-radius: 50%;
+  width: 4.25rem;
+  height: 4.25rem;
+  border-style: solid;
+  border-width: 5px;
+  transform: rotate(45deg);
+}
+
+.completed,
+.percent-complete {
+  font-family: "Montserrat", sans-serif;
+  color: #121212;
+}
+
+.percent-complete {
+  font-size: 2rem;
+}
+
+.completed {
+  font-size: 0.875rem;
+  opacity: 0.5;
+}
+
+.progress-divider {
+  width: 0.125rem;
+  height: 4.375rem;
+  margin: 0 3.688rem 0 4.938rem;
+  background-color: #e8e8e8;
+}
+
+.current-chapter-container {
+  display: flex;
+  flex-direction: column;
+  grid-gap: 20px;
+  gap: 20px;
+  width: 25rem;
+}
+
+.current-chapter-label {
+  font-size: 0.813rem;
+  opacity: 0.5;
+}
+
+.current-chapter-number {
+  margin-top: 0.438rem;
+  font-size: 1rem;
+  letter-spacing: -0.4px;
+}
+
+.current-chapter-number,
+.current-chapter-label {
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  color: #121212;
+}
+
+.update-progress-button {
+  width: 75%;
+  cursor: pointer;
+  border: none;
+  background-color: #0290ff;
+  border-radius: 3px;
+  padding: 8px 24px;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  color: #fff;
+}
 
