--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -6,25 +6,10 @@
 
 :root {
 
-  --margin-28: 28px;
-  --margin-48: 48px;
-  --padding-5: 5px;
-  --padding-10: 10px;
-  --padding-20: 20px;
-  --padding-40: 40px;
-  --font-18: 18px;
-  --font-20: 20px;
-  --font:'Nunito', sans-serif;
-  --demi-bold: 600;
-  --bold: 700;
-
-  --dark-red: #cc0000;
-  --light-grey: #f3f3f3;
-  --purple: #5e6ec9;
-  --dark-blue: rgb(17, 97, 201);
-  --grey: #c5c5c5;
-  --black: #111111;
-  --white: #ffffff;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  background-color: #FAFAFA;
+  background-image: url(https://images7.alphacoders.com/125/1254946.jpg);
 
 }
 
@@ -48,13 +33,15 @@ header {
   display: flex;
   justify-content: space-between;
   
+  background-color: #1f5156;
+  height: 80px;
+
+
   align-items: center;
-  width: 100%;
-  border-bottom: 5px solid rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
-  color: #000000;
-  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg);
-  
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 20;
 }
 
 .welcome {
@@ -69,23 +56,26 @@ header {
 }
 
 .click{
-  background-color: #ffffff00;
-  border: none;
-  font-weight: bold;
-  color: rgb(231, 231, 231);
-  font-size: 17px;
+  font-weight: 800;
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  color: transparent;
+  font-size: 40px;
+  margin: 0 10px;
+  padding: 12px 5px;
+  display: inline-block;
+  line-height: 1;
+  background-image: url(https://thumbs.dreamstime.com/b/vector-pink-sky-clouds-anime-clean-style-evening-sunset-background-234335822.jpg);
 }
 header a {
   
-  color: #000000;
-  
-  display: block;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none; 
-  background-image: url(https://img.myloview.com/posters/vector-blue-sky-clouds-anime-clean-style-background-design-700-184099297.jpg); 
-  
+  font-weight: 800;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+  color: transparent;
+  font-size: 40px;
+  margin: 0 10px;
+  padding: 12px 5px;
+  display: inline-block;
+  line-height: 1;
 }
 
 /* main {
@@ -93,7 +83,7 @@ header a {
 } */
 
 form {
-  background-color: #000000;
+  /* background-color: #000000;
   border: 2px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
@@ -104,11 +94,11 @@ form {
   margin-top: 3em;
   margin-bottom: 5em;
   padding: 0 1rem 1rem;
-  background-image: url(https://images7.alphacoders.com/125/1254946.jpg); 
+  background-image: url(https://images7.alphacoders.com/125/1254946.jpg);  */
 }
 
 .form1 {
-  /* background-color: #000000;
+  background-color: #000000;
   border: 2px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
@@ -120,10 +110,58 @@ form {
   margin-top: 3em;
   margin-bottom: 5em;
   padding: 0 1rem 1rem;
-  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg);  */
+  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg); 
 }
 
 .form2 {
+  background-color: #000000;
+  border: 2px solid rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  color: white;
+  margin-top: 3em;
+  margin-bottom: 5em;
+  padding: 0 1rem 1rem;
+  background-image: url(https://ih0.redbubble.net/image.755067291.0854/flat,800x800,075,f.u1.jpg); 
+}
+
+.form4 {
+  background-color: #000000;
+  border: 2px solid rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  color: white;
+  margin-top: 3em;
+  margin-bottom: 5em;
+  padding: 0 1rem 1rem;
+  background-image: url(https://ih0.redbubble.net/image.755067291.0854/flat,800x800,075,f.u1.jpg); 
+}
+
+.form7 {
+  background-color: #000000;
+  border: 2px solid rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  color: white;
+  margin-top: 3em;
+  margin-bottom: 5em;
+  padding: 0 1rem 1rem;
+  background-image: url(https://ih0.redbubble.net/image.755067291.0854/flat,800x800,075,f.u1.jpg); 
+}
+
+.form8 {
   background-color: #000000;
   border: 2px solid rgb(255, 255, 255);
   display: flex;
@@ -243,7 +281,7 @@ form button[type="submit"] {
     
   }
 
-  h1 {
+  /* h1 {
     margin: 10px;
     font-size: 40px;
   }
@@ -254,7 +292,7 @@ form button[type="submit"] {
     visibility: hidden;
     opacity: 0;
 
-  }
+  } */
 
   span {
 font-weight: bold;
@@ -672,10 +710,10 @@ font-weight: bold;
   align-items: center;
   width: 100%;
   border-bottom: 5px solid rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  
+ 
+  background-image: url(https://images7.alphacoders.com/125/1254946.jpg);
   color: #000000;
-  background-image: url(https://picstatio.com/large/95da7f/dark-sunset-sky-anime-girl-outdoor-art.jpg);
-  color: #e8e8e8;
 }
 
 .header__nav {
@@ -699,12 +737,14 @@ font-weight: bold;
 .title {
   text-align: center;
   margin-top: var(--margin-28);
+
 }
 
 .product-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 .product {
@@ -717,6 +757,13 @@ font-weight: bold;
   border-radius: 20px;
   box-shadow:  2px 4px 4px var(--grey);
   margin: var(--margin-28);
+  --dark-red: #cc0000;
+  --light-grey: #f3f3f3;
+  --purple: #5e6ec9;
+  --dark-blue: rgb(17, 97, 201);
+  --grey: #c5c5c5;
+  --black: #111111;
+  --white: #ffffff;
 }
 
 .product__img {
@@ -774,6 +821,24 @@ font-weight: bold;
   display: flex;
   flex-direction: column;
   align-items: center;
+  --margin-28: 28px;
+  --margin-48: 48px;
+  --padding-5: 5px;
+  --padding-10: 10px;
+  --padding-20: 20px;
+  --padding-40: 40px;
+  --font-18: 18px;
+  --font-20: 20px;
+  --font:'Nunito', sans-serif;
+  --demi-bold: 600;
+  --bold: 700;
+  --dark-red: #cc0000;
+  --light-grey: #f3f3f3;
+  --purple: #5e6ec9;
+  --dark-blue: rgb(17, 97, 201);
+  --grey: #c5c5c5;
+  --black: #111111;
+  --white: #ffffff;
 }
 
 .cart {
