--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -144,18 +144,19 @@ form {
 
 .form4 {
   background-color: #000000;
+  font-size: larger;
   border: 2px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 200px;
-  height: 200px;
+  width: 600px;
+  height: 300px;
   margin: 0 auto;
-  color: white;
+  color: rgb(0, 0, 0);
   margin-top: 3em;
   margin-bottom: 5em;
   padding: 0 1rem 1rem;
-  background-image: url(https://ih0.redbubble.net/image.755067291.0854/flat,800x800,075,f.u1.jpg); 
+  background-image: url(https://images7.alphacoders.com/125/1254946.jpg); 
 }
 
 .form7 {
